--- a/Web411019294/Web411019294.csproj
+++ b/Web411019294/Web411019294.csproj
@@ -150,6 +150,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\partials\Student.cs" />
     <Compile Include="Models\Student.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
